// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BuilderTemplateEditorContent > should render simple text 1`] = `
<div
  class="BuilderTemplateEditorContent"
  data-v-f4c188f2=""
>
  hello
</div>
`;

exports[`BuilderTemplateEditorContent > should render text with breaking lines 1`] = `
<div
  class="BuilderTemplateEditorContent"
  data-v-f4c188f2=""
>
  hello 
  <span
    class="BuilderTemplateEditorContentTag"
    data-v-4e6e767a=""
    data-v-f4c188f2=""
  >
    <span
      class="BuilderTemplateEditorContentTag__sign"
      data-v-4e6e767a=""
    >
      @
    </span>
    <span
      class="BuilderTemplateEditorContentTag__bracket"
      data-v-4e6e767a=""
    >
      {
    </span>
    tag
    <span
      class="BuilderTemplateEditorContentTag__bracket"
      data-v-4e6e767a=""
    >
      }
    </span>
  </span>
  
  <br
    data-v-f4c188f2=""
  />
  
  and \${tag}
</div>
`;

exports[`BuilderTemplateEditorContent > should render text with one tag 1`] = `
<div
  class="BuilderTemplateEditorContent"
  data-v-f4c188f2=""
>
  hello 
  <span
    class="BuilderTemplateEditorContentTag"
    data-v-4e6e767a=""
    data-v-f4c188f2=""
  >
    <span
      class="BuilderTemplateEditorContentTag__sign"
      data-v-4e6e767a=""
    >
      @
    </span>
    <span
      class="BuilderTemplateEditorContentTag__bracket"
      data-v-4e6e767a=""
    >
      {
    </span>
    tag
    <span
      class="BuilderTemplateEditorContentTag__bracket"
      data-v-4e6e767a=""
    >
      }
    </span>
  </span>
</div>
`;
